# sp1-sui

./: Cargo.toml  LICENSE-MIT  README.md
example/email-domain-example/script/src/: main.rs
example/groth16_verifier/tests/: groth16_verifier_tests.move
example/sp1-sui-sdk/src/: utils.rs
example/sp1-zklogin-extension/: Cargo.toml  typescript
example/sp1-zklogin-extension/elf/: riscv32im-succinct-zkvm-elf
example/sp1-zklogin-extension/lib/: Cargo.toml
example/sp1-zklogin-extension/lib/src/: lib.rs
example/sp1-zklogin-extension/program/: Cargo.toml
example/sp1-zklogin-extension/program/src/: main.rs
example/sp1-zklogin-extension/script/: Cargo.toml
example/sp1-zklogin-extension/script/src/: main.rs
example/sp1_sui_sdk/: Cargo.toml
example/sp1_zklogin_extension/script/src/: main.rs
examples/fibonacci/: README.md
examples/move/groth16-verifier/: Move.toml
examples/move/groth16-verifier/sources/: groth16_verifier.move
examples/sp1-jwt-verify-email-domain/: Cargo.toml
examples/sp1-jwt-verify-email-domain/elf/: riscv32im-succinct-zkvm-elf
examples/sp1-jwt-verify-email-domain/lib/src/: lib.rs
examples/sp1-jwt-verify-email-domain/program/src/: main.rs
examples/sp1-jwt-verify-email-domain/script/: measure_time.sh
examples/sp1-jwt-verify-email-domain/script/src/: main.rs
examples/sp1-sui-sdk/src/: main.rs
verifier/: Cargo.toml
verifier /src/: ark_converter.rs  lib.rs  main.rs  test.rs
verifier/src/: lib.rs  main.rs
