[package]
name = "sp1-sui"
version = "0.1.0"
edition = "2024"

[dependencies]
ark-bn254 = "0.5.0"
ark-ec = "0.5.0"
ark-ff = "0.5.0"
ark-groth16 = "0.5.0"
ark-serialize = "0.5.0"
ark-snark = "0.5.1"
clap = "4.5.26"
hex = "0.4.3"
num-bigint = "0.4.6"
num-traits = "0.2.19"
sp1-sdk = "3.0.0"
sp1-verifier = { version = "3.0.0", default-features = false }
thiserror = "2.0.11"

[dev-dependencies]
hex-literal = "0.3.1"
num-traits = { version = "0.2.19" }
