[package]
name = "sp1-sui-sdk"
version = "0.1.0"
edition = "2024"

[dependencies]
sui_sdk = { git = "https://github.com/mystenlabs/sui", package = "sui-sdk" }
sui_config = { git = "https://github.com/mystenlabs/sui", package = "sui-config" }
sui_keys = { git = "https://github.com/mystenlabs/sui", package = "sui-keys" }
shared_crypto = { git = "https://github.com/mystenlabs/sui", package = "shared-crypto" }
sui_json_rpc_types = { git = "https://github.com/mystenlabs/sui", package = "sui-json-rpc-types" }
tokio = { version = "1.2", features = ["full"] }
anyhow = "1.0"
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.128"
reqwest = "0.12.8"
tracing = "0.1.40"
futures = "0.3.31"
bcs = "0.1.6"
sp1-sdk = { workspace = true }
sp1-sui = { workspace = true }
